@@ -37,19 +37,13 @@ CLEANFILES += $(autostart_DATA)
 
 
 if GCONF_SCHEMAS_INSTALL
-install-data-local:
-	if test -z "$(DESTDIR)" ; then \
 		for p in $(schemas_DATA) ; do \
 			GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $$p ; \
-		done \
-	fi
-uninstall-local:
+		done
+else
 	for p in $(schemas_DATA) ; do \
 		GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-uninstall-rule $$p ; \
 	done
-else
-install-data-local:
-uninstall-local:
 endif
 
 EXTRA_DIST = \
