@@ -1,3 +1,7 @@
+2008-10-13 Og Maciel <ogmaciel@gnome.org>
+
+	* data/Makefile.am: Make sure that gconf schema is installed.
+
 2008-10-01 Og Maciel <ogmaciel@gnome.org>
 
 	* src/gui/widgets/Makefile.am:
